--- a/META.yml
+++ b/META.yml
@@ -1,23 +1,29 @@
 ---
 name: Text-Todo
-version: 0.0.1
+version: v0.1.0
 author:
   - 'Andrew Fresh <andrew@cpan.org>'
 abstract: Perl interface to todo_txt files
 license: perl
+resources:
+  license: http://dev.perl.org/licenses/
 requires:
+  Carp: 0
+  Class::Std::Utils: 0
+  File::Spec: 0
+  List::Util: 0
   Test::More: 0
   version: 0
-generated_by: Module::Build version 0.280801
-meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.2.html
-  version: 1.2
+configure_requires:
+  Module::Build: 0.340201
 provides:
   Text::Todo:
     file: lib/Text/Todo.pm
-    version: 0.0.1
+    version: v0.1.0
   Text::Todo::Entry:
     file: lib/Text/Todo/Entry.pm
-    version: 0.0.1
-resources:
-  license: http://dev.perl.org/licenses/
+    version: v0.1.0
+generated_by: Module::Build version 0.340201
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
