--- a/META.yml
+++ b/META.yml
@@ -1,29 +1,30 @@
 ---
-name: Text-Todo
-version: v0.2.0
+abstract: 'Perl interface to todotxt files'
 author:
   - 'Andrew Fresh <andrew@cpan.org>'
-abstract: Perl interface to todotxt files
-license: perl
-resources:
-  license: http://dev.perl.org/licenses/
 build_requires:
-  Test::More: 0.82
-requires:
-  Carp: 0
-  Class::Std::Utils: 0
-  File::Spec: 0
-  version: 0
+  Test::More: '0.82'
 configure_requires:
-  Module::Build: 0.340201
+  Module::Build: '0.42'
+dynamic_config: 1
+generated_by: 'Module::Build version 0.4205, CPAN::Meta::Converter version 2.140640'
+license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: '1.4'
+name: Text-Todo
 provides:
   Text::Todo:
     file: lib/Text/Todo.pm
-    version: v0.2.0
+    version: v0.2.1
   Text::Todo::Entry:
     file: lib/Text/Todo/Entry.pm
-    version: v0.2.0
-generated_by: Module::Build version 0.340201
-meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+    version: v0.2.1
+requires:
+  Carp: '0'
+  Class::Std::Utils: '0'
+  File::Spec: '0'
+  version: '0'
+resources:
+  license: http://dev.perl.org/licenses/
+version: v0.2.1
